--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "framer-motion": "^12.4.11",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next": "15.1.7",
@@ -28,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-icons": "^5.5.0",
     "react-webcam": "^7.2.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
